# kiro-sdlc-starter

./: .envrc.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CORRECTIONS_SUMMARY.md  README.md  RESTRUCTURING_SUMMARY.md  TEST_ENGINEER_CLI_FINDINGS.md  TEST_ENGINEER_FINDINGS.md  TEST_ENGINEER_IDE_FINDINGS.md
kiro-project-sample-ide/: .envrc.example  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
kiro-project-sample-ide/.kiro/: README.md  cli-config.json
kiro-project-sample-ide/.kiro/agents/: code-review.md  security-auditor.md  test-engineer.md
kiro-project-sample-ide/.kiro/commands/: sdlc.md
kiro-project-sample-ide/.kiro/plugins/: deploy-verifier.md
kiro-project-sample-ide/.kiro/settings/: mcp.json
kiro-project-sample-ide/.kiro/specs/kiro-cli-sdlc/: design.md  (+2 more)
kiro-project-sample-ide/.kiro/steering/: product.md  sdlc-orchestrator.md  sdlc-workflow.md  structure.md  tech.md
kiro-project-sample-ide/docs/: GETTING_STARTED.md  HOOKS_SETUP_COMPLETE.md  KIRO_CLI_SETUP.md  KIRO_IDE_COMPLIANCE.md  PARITY_ACHIEVED.md  REVIEW_HOOKS_SETUP.md  SDLC_PARITY_SOLUTION.md  SDLC_WORKFLOW_TEST.md  SOLUTION_SUMMARY.md  api.md
kiro-project-sample-ide/docs/sdlc-framework/: README.md
kiro-project-sample-ide/src/api/: sample_api.py
kiro-project-sample-ide/src/models/: user.py
kiro-project-sample-ide/src/services/: user_service.py
kiro-project-sample-ide/tests/fixtures/: user_fixtures.py
kiro-project-sample-ide/tests/integration/: test_api.py
kiro-project-sample-ide/tests/unit/: test_user.py  test_user_service.py
(+74 files in other folders)
